--- a/data/ui/window.ui
+++ b/data/ui/window.ui
@@ -7,129 +7,119 @@
   <template class="InspectorWindow" parent="AdwApplicationWindow">
     <property name="title">Inspector</property>
     <child>
-      <object class="AdwOverlaySplitView">
+      <object class="AdwOverlaySplitView" id="overlay_split_view">
         <property name="content">
           <object class="AdwToolbarView">
             <property name="content">
-              <object class="GtkStack" id="main_stack">
-                <child>
-                  <object class="GtkStackPage">
-                    <property name="child">
-                      <object class="GtkScrolledWindow">
-                        <property name="child">
-                          <object class="GtkBox" id="motherboard_content"/>
-                        </property>
+              <object class="GtkScrolledWindow">
+                <property name="child">
+                  <object class="AdwClamp">
+                    <child>
+                      <object class="GtkStack" id="main_stack">
+                        <child>
+                          <object class="GtkStackPage">
+                            <property name="child">
+                              <object class="GtkBox" id="motherboard_content">
+                                <property name="orientation">vertical</property>
+                              </object>
+                            </property>
+                            <property name="icon-name">airplane-mode-symbolic</property>
+                            <property name="name">motherboard</property>
+                            <property name="title">Motherboard</property>
+                          </object>
+                        </child>
+                        <child>
+                          <object class="GtkStackPage">
+                            <property name="child">
+                              <object class="GtkLabel">
+                                <property name="label">Empty Page</property>
+                              </object>
+                            </property>
+                            <property name="name">processor</property>
+                            <property name="title">Processor</property>
+                          </object>
+                        </child>
+                        <child>
+                          <object class="GtkStackPage">
+                            <property name="child">
+                              <object class="GtkLabel">
+                                <property name="label">Empty Page</property>
+                              </object>
+                            </property>
+                            <property name="name">memory</property>
+                            <property name="title">Memory</property>
+                          </object>
+                        </child>
+                        <child>
+                          <object class="GtkStackPage">
+                            <property name="child">
+                              <object class="GtkLabel">
+                                <property name="label">Empty Page</property>
+                              </object>
+                            </property>
+                            <property name="name">disk_drives</property>
+                            <property name="title">Disk Drives</property>
+                          </object>
+                        </child>
+                        <child>
+                          <object class="GtkStackPage">
+                            <property name="child">
+                              <object class="GtkLabel">
+                                <property name="label">Empty Page</property>
+                              </object>
+                            </property>
+                            <property name="name">pci_devices</property>
+                            <property name="title">PCI Devices</property>
+                          </object>
+                        </child>
+                        <child>
+                          <object class="GtkStackPage">
+                            <property name="child">
+                              <object class="GtkLabel">
+                                <property name="label">Empty Page</property>
+                              </object>
+                            </property>
+                            <property name="name">usb_devices</property>
+                            <property name="title">USB Devices</property>
+                          </object>
+                        </child>
+                        <child>
+                          <object class="GtkStackPage">
+                            <property name="child">
+                              <object class="GtkLabel">
+                                <property name="label">Empty Page</property>
+                              </object>
+                            </property>
+                            <property name="name">network_devices</property>
+                            <property name="title">Network Devices</property>
+                          </object>
+                        </child>
+                        <child>
+                          <object class="GtkStackPage">
+                            <property name="child">
+                              <object class="GtkLabel">
+                                <property name="label">Empty Page</property>
+                              </object>
+                            </property>
+                            <property name="name">kernel</property>
+                            <property name="title">Kernel</property>
+                          </object>
+                        </child>
+                        <child>
+                          <object class="GtkStackPage">
+                            <property name="child">
+                              <object class="GtkLabel">
+                                <property name="label">Empty Page</property>
+                              </object>
+                            </property>
+                            <property name="name">distribution</property>
+                            <property name="title">Distribution</property>
+                          </object>
+                        </child>
                       </object>
-                    </property>
-                    <property name="icon-name">airplane-mode-symbolic</property>
-                    <property name="name">motherboard</property>
-                    <property name="title">Motherboard</property>
+                    </child>
                   </object>
-                </child>
-                <child>
-                  <object class="GtkStackPage">
-                    <property name="child">
-                      <object class="GtkScrolledWindow">
-                        <property name="child">
-                          <object class="GtkBox" id="processor_content"/>
-                        </property>
-                      </object>
-                    </property>
-                    <property name="name">processor</property>
-                    <property name="title">Processor</property>
-                  </object>
-                </child>
-                <child>
-                  <object class="GtkStackPage">
-                    <property name="child">
-                      <object class="GtkScrolledWindow">
-                        <property name="child">
-                          <object class="GtkBox" id="memory_content"/>
-                        </property>
-                      </object>
-                    </property>
-                    <property name="name">memory</property>
-                    <property name="title">Memory</property>
-                  </object>
-                </child>
-                <child>
-                  <object class="GtkStackPage">
-                    <property name="child">
-                      <object class="GtkScrolledWindow">
-                        <property name="child">
-                          <object class="GtkBox" id="disk_content"/>
-                        </property>
-                      </object>
-                    </property>
-                    <property name="name">disk_drives</property>
-                    <property name="title">Disk Drives</property>
-                  </object>
-                </child>
-                <child>
-                  <object class="GtkStackPage">
-                    <property name="child">
-                      <object class="GtkScrolledWindow">
-                        <property name="child">
-                          <object class="GtkBox" id="pci_content"/>
-                        </property>
-                      </object>
-                    </property>
-                    <property name="name">pci_devices</property>
-                    <property name="title">PCI Devices</property>
-                  </object>
-                </child>
-                <child>
-                  <object class="GtkStackPage">
-                    <property name="child">
-                      <object class="GtkScrolledWindow">
-                        <property name="child">
-                          <object class="GtkBox" id="usb_content"/>
-                        </property>
-                      </object>
-                    </property>
-                    <property name="name">usb_devices</property>
-                    <property name="title">USB Devices</property>
-                  </object>
-                </child>
-                <child>
-                  <object class="GtkStackPage">
-                    <property name="child">
-                      <object class="GtkScrolledWindow">
-                        <property name="child">
-                          <object class="GtkBox" id="network_content"/>
-                        </property>
-                      </object>
-                    </property>
-                    <property name="name">network_devices</property>
-                    <property name="title">Network Devices</property>
-                  </object>
-                </child>
-                <child>
-                  <object class="GtkStackPage">
-                    <property name="child">
-                      <object class="GtkScrolledWindow">
-                        <property name="child">
-                          <object class="GtkBox" id="kernel_content"/>
-                        </property>
-                      </object>
-                    </property>
-                    <property name="name">kernel</property>
-                    <property name="title">Kernel</property>
-                  </object>
-                </child>
-                <child>
-                  <object class="GtkStackPage">
-                    <property name="child">
-                      <object class="GtkScrolledWindow">
-                        <property name="child">
-                          <object class="GtkBox" id="distribution_content"/>
-                        </property>
-                      </object>
-                    </property>
-                    <property name="name">distribution</property>
-                    <property name="title">Distribution</property>
-                  </object>
-                </child>
+                </property>
               </object>
             </property>
             <property name="reveal-bottom-bars">False</property>
@@ -148,8 +138,8 @@
           <object class="AdwToolbarView">
             <property name="content">
               <object class="GtkStackSidebar">
-                <property name="stack">main_stack</property>
                 <property name="css-classes">sidebar-fix</property>
+                <property name="stack">main_stack</property>
               </object>
             </property>
             <child type="top">
@@ -164,6 +154,14 @@
           </object>
         </property>
         <property name="sidebar-width-fraction">0.45</property>
+      </object>
+    </child>
+    <!-- Custom template fragments -->
+    <child>
+      <object class="AdwBreakpoint">
+        <!-- Custom fragments -->
+        <condition>max-width: 600px</condition>
+        <setter object="overlay_split_view" property="collapsed">true</setter>
       </object>
     </child>
   </template>
