--- a/data/ui/window.ui
+++ b/data/ui/window.ui
@@ -6,130 +6,242 @@
   <requires lib="libadwaita" version="1.4"/>
   <template class="InspectorWindow" parent="AdwApplicationWindow">
     <property name="title">Inspector</property>
+    <property name="width-request">360</property>
+    <property name="height-request">400</property>
     <child>
       <object class="AdwOverlaySplitView" id="overlay_split_view">
         <property name="content">
           <object class="AdwToolbarView">
             <property name="content">
-              <object class="GtkScrolledWindow">
-                <property name="child">
-                  <object class="AdwClamp">
-                    <child>
-                      <object class="GtkStack" id="main_stack">
+              <object class="GtkStack" id="main_stack">
+                <child>
+                  <object class="GtkStackPage">
+                    <property name="child">
+                      <object class="GtkScrolledWindow">
+                        <property name="name" translatable="yes">Motherboard</property>
                         <child>
-                          <object class="GtkStackPage">
-                            <property name="child">
-                              <object class="GtkBox" id="motherboard_content">
-                                <property name="orientation">vertical</property>
-                              </object>
-                            </property>
-                            <property name="icon-name">airplane-mode-symbolic</property>
-                            <property name="name">motherboard</property>
-                            <property name="title">Motherboard</property>
-                          </object>
-                        </child>
+                         <object class="AdwClamp">
+                           <property name="margin-start">12</property>
+                           <property name="margin-end">12</property>
+                           <child>
+                            <object class="GtkBox" id="motherboard_content">
+                              <property name="orientation">vertical</property>
+                            </object>
+                           </child>
+                        </object>
+                      </child>
+                      </object>
+                    </property>
+                    <property name="name">motherboard</property>
+                    <property name="title" translatable="yes">Motherboard</property>
+                  </object>
+                </child>
+                <child>
+                  <object class="GtkStackPage">
+                    <property name="child">
+                      <object class="GtkScrolledWindow">
+                        <property name="name" translatable="yes">Processor</property>
                         <child>
-                          <object class="GtkStackPage">
-                            <property name="child">
-                              <object class="GtkLabel">
-                                <property name="label">Empty Page</property>
-                              </object>
-                            </property>
-                            <property name="name">processor</property>
-                            <property name="title">Processor</property>
-                          </object>
-                        </child>
-                        <child>
-                          <object class="GtkStackPage">
-                            <property name="child">
-                              <object class="GtkLabel">
-                                <property name="label">Empty Page</property>
-                              </object>
-                            </property>
-                            <property name="name">memory</property>
-                            <property name="title">Memory</property>
-                          </object>
-                        </child>
-                        <child>
-                          <object class="GtkStackPage">
-                            <property name="child">
-                              <object class="GtkLabel">
-                                <property name="label">Empty Page</property>
-                              </object>
-                            </property>
-                            <property name="name">disk_drives</property>
-                            <property name="title">Disk Drives</property>
-                          </object>
-                        </child>
-                        <child>
-                          <object class="GtkStackPage">
-                            <property name="child">
-                              <object class="GtkLabel">
-                                <property name="label">Empty Page</property>
-                              </object>
-                            </property>
-                            <property name="name">pci_devices</property>
-                            <property name="title">PCI Devices</property>
-                          </object>
-                        </child>
-                        <child>
-                          <object class="GtkStackPage">
-                            <property name="child">
-                              <object class="GtkLabel">
-                                <property name="label">Empty Page</property>
-                              </object>
-                            </property>
-                            <property name="name">usb_devices</property>
-                            <property name="title">USB Devices</property>
-                          </object>
-                        </child>
-                        <child>
-                          <object class="GtkStackPage">
-                            <property name="child">
-                              <object class="GtkLabel">
-                                <property name="label">Empty Page</property>
-                              </object>
-                            </property>
-                            <property name="name">network_devices</property>
-                            <property name="title">Network Devices</property>
-                          </object>
-                        </child>
-                        <child>
-                          <object class="GtkStackPage">
-                            <property name="child">
-                              <object class="GtkLabel">
-                                <property name="label">Empty Page</property>
-                              </object>
-                            </property>
-                            <property name="name">kernel</property>
-                            <property name="title">Kernel</property>
-                          </object>
-                        </child>
-                        <child>
-                          <object class="GtkStackPage">
-                            <property name="child">
-                              <object class="GtkLabel">
-                                <property name="label">Empty Page</property>
-                              </object>
-                            </property>
-                            <property name="name">distribution</property>
-                            <property name="title">Distribution</property>
+                         <object class="AdwClamp">
+                           <property name="margin-start">12</property>
+                           <property name="margin-end">12</property>
+                           <child>
+                            <object class="GtkBox" id="cpu_content">
+                              <property name="orientation">vertical</property>
+                            </object>
+                           </child>
                           </object>
                         </child>
                       </object>
-                    </child>
+                    </property>
+                    <property name="name">processor</property>
+                    <property name="title" translatable="yes">Processor</property>
                   </object>
-                </property>
-              </object>
+                </child>
+                <child>
+                  <object class="GtkStackPage">
+                    <property name="child">
+                      <object class="GtkScrolledWindow">
+                        <property name="name" translatable="yes">Memory</property>
+                        <child>
+                         <object class="AdwClamp">
+                           <property name="margin-start">12</property>
+                           <property name="margin-end">12</property>
+                           <child>
+                            <object class="GtkBox" id="memory_content">
+                              <property name="orientation">vertical</property>
+                            </object>
+                           </child>
+                          </object>
+                        </child>
+                      </object>
+                    </property>
+                    <property name="name">memory</property>
+                    <property name="title" translatable="yes">Memory</property>
+                  </object>
+                </child>
+                <child>
+                  <object class="GtkStackPage">
+                    <property name="child">
+                      <object class="GtkScrolledWindow">
+                        <property name="name" translatable="yes">Disk Drives</property>
+                        <child>
+                         <object class="AdwClamp">
+                           <property name="margin-start">12</property>
+                           <property name="margin-end">12</property>
+                           <child>
+                            <object class="GtkBox" id="disks_content">
+                              <property name="orientation">vertical</property>
+                            </object>
+                           </child>
+                          </object>
+                        </child>
+                      </object>
+                    </property>
+                    <property name="name">disk_drives</property>
+                    <property name="title" translatable="yes">Disk Drives</property>
+                  </object>
+                </child>
+                <child>
+                  <object class="GtkStackPage">
+                    <property name="child">
+                      <object class="GtkScrolledWindow">
+                        <property name="name" translatable="yes">PCI Devices</property>
+                        <child>
+                         <object class="AdwClamp">
+                           <property name="margin-start">12</property>
+                           <property name="margin-end">12</property>
+                           <child>
+                            <object class="GtkBox" id="pci_content">
+                              <property name="orientation">vertical</property>
+                            </object>
+                           </child>
+                          </object>
+                        </child>
+                      </object>
+                    </property>
+                    <property name="name">pci_devices</property>
+                    <property name="title" translatable="yes">PCI Devices</property>
+                  </object>
+                </child>
+                <child>
+                  <object class="GtkStackPage">
+                    <property name="child">
+                      <object class="GtkScrolledWindow">
+                        <property name="name" translatable="yes">USB Devices</property>
+                        <child>
+                         <object class="AdwClamp">
+                           <property name="margin-start">12</property>
+                           <property name="margin-end">12</property>
+                           <child>
+                            <object class="GtkBox" id="usb_content">
+                              <property name="orientation">vertical</property>
+                            </object>
+                           </child>
+                          </object>
+                        </child>
+                      </object>
+                    </property>
+                    <property name="name">usb_devices</property>
+                    <property name="title" translatable="yes">USB Devices</property>
+                  </object>
+                </child>
+                <child>
+                  <object class="GtkStackPage">
+                    <property name="child">
+                      <object class="GtkScrolledWindow">
+                        <property name="name" translatable="yes">Network Devices</property>
+                        <child>
+                         <object class="AdwClamp">
+                           <property name="margin-start">12</property>
+                           <property name="margin-end">12</property>
+                           <child>
+                            <object class="GtkBox" id="network_content">
+                              <property name="orientation">vertical</property>
+                            </object>
+                           </child>
+                        </object>
+                      </child>
+                      </object>
+                    </property>
+                    <property name="name">network_devices</property>
+                    <property name="title" translatable="yes">Network Devices</property>
+                  </object>
+                </child>
+                <child>
+                  <object class="GtkStackPage">
+                    <property name="child">
+                      <object class="GtkScrolledWindow">
+                        <property name="name" translatable="yes">Kernel</property>
+                        <child>
+                         <object class="AdwClamp">
+                           <property name="margin-start">12</property>
+                           <property name="margin-end">12</property>
+                           <child>
+                            <object class="GtkBox" id="kernel_content">
+                              <property name="orientation">vertical</property>
+                            </object>
+                           </child>
+                        </object>
+                      </child>
+                    </object>
+                    </property>
+                    <property name="name">kernel</property>
+                    <property name="title" translatable="yes">Kernel</property>
+                  </object>
+                </child>
+                <child>
+                  <object class="GtkStackPage">
+                    <property name="child">
+                      <object class="GtkScrolledWindow">
+                        <property name="name" translatable="yes">Distribution</property>
+                        <child>
+                         <object class="AdwClamp">
+                           <property name="margin-start">12</property>
+                           <property name="margin-end">12</property>
+                           <child>
+                            <object class="GtkBox" id="system_content">
+                              <property name="orientation">vertical</property>
+                            </object>
+                          </child>
+                        </object>
+                      </child>
+                    </object>
+                  </property>
+                  <property name="name">distribution</property>
+                    <property name="title" translatable="yes">Distribution</property>
+                </object>
+            </child>
+          </object>
             </property>
             <property name="reveal-bottom-bars">False</property>
             <child type="top">
               <object class="AdwHeaderBar">
                 <property name="title-widget">
-                  <object class="AdwWindowTitle">
-                    <property name="title">Motherboard</property>
+                  <object class="AdwWindowTitle" id="window_title">
+                    <property name="title" translatable="yes">Motherboard</property>
                   </object>
                 </property>
+                <child type="start">
+                  <object class="GtkButton" id="sidebar_button">
+                    <property name="icon-name">sidebar-show-symbolic</property>
+                    <property name="visible">false</property>
+                    <signal name="clicked" handler="on_sidebar_button_clicked"/>
+                  </object>
+                </child>
+                <child type="end">
+                  <object class="GtkMenuButton" id="collapsed_menu_button">
+                    <property name="icon-name">open-menu-symbolic</property>
+                    <property name="menu-model">primary_menu</property>
+                    <property name="visible">false</property>
+                  </object>
+                </child>
+                <child type="end">
+                  <object class="GtkButton">
+                    <property name="icon-name">arrow-circular-top-right-symbolic</property>
+                    <signal name="clicked" handler="on_reload_clicked"/>
+                  </object>
+                </child>
               </object>
             </child>
           </object>
@@ -145,24 +257,41 @@
             <child type="top">
               <object class="AdwHeaderBar">
                 <child type="start">
-                  <object class="GtkMenuButton">
+                  <object class="GtkMenuButton" id="menu_button">
                     <property name="icon-name">open-menu-symbolic</property>
+                    <property name="menu-model">primary_menu</property>
                   </object>
                 </child>
               </object>
             </child>
           </object>
         </property>
-        <property name="sidebar-width-fraction">0.45</property>
+        <property name="sidebar-width-fraction">0.30</property>
       </object>
     </child>
     <!-- Custom template fragments -->
     <child>
       <object class="AdwBreakpoint">
-        <!-- Custom fragments -->
         <condition>max-width: 600px</condition>
         <setter object="overlay_split_view" property="collapsed">true</setter>
+        <setter object="collapsed_menu_button" property="visible">true</setter>
+        <setter object="menu_button" property="visible">false</setter>
+        <setter object="sidebar_button" property="visible">true</setter>
       </object>
+    </child>
+    <child>
+      <menu id="primary_menu">
+        <section>
+          <item>
+            <attribute name="action">win.show-help-overlay</attribute>
+            <attribute name="label" translatable="yes">Keyboard Shortcuts</attribute>
+          </item>
+          <item>
+            <attribute name="action">app.about</attribute>
+            <attribute name="label" translatable="yes">About Inspector</attribute>
+          </item>
+        </section>
+      </menu>
     </child>
   </template>
 </interface>
