--- a/data/ui/window.ui
+++ b/data/ui/window.ui
@@ -243,6 +243,13 @@
                     <signal name="clicked" handler="on_reload_clicked"/>
                   </object>
                 </child>
+                <child>
+                  <object class="GtkMenuButton">
+                    <property name="icon-name">accessories-text-editor-symbolic</property>
+                    <property name="menu-model">export_menu</property>
+                    <property name="tooltip-text" translatable="yes">Open Data Export Options</property>
+                  </object>
+                </child>
               </object>
             </child>
           </object>
@@ -290,6 +297,22 @@
           <item>
             <attribute name="action">app.about</attribute>
             <attribute name="label" translatable="yes">About Inspector</attribute>
+          </item>
+        </section>
+      </menu>
+      <menu id="export_menu">
+        <section>
+          <item>
+            <attribute name="action">app.export_md</attribute>
+            <attribute name="label" translatable="yes">Export as .md</attribute>
+          </item>
+          <item>
+            <attribute name="action">app.export_html</attribute>
+            <attribute name="label" translatable="yes">Export as .html</attribute>
+          </item>
+          <item>
+            <attribute name="action">app.export_pdf</attribute>
+            <attribute name="label" translatable="yes">Export as .pdf</attribute>
           </item>
         </section>
       </menu>
